fix: code polish for omdb/theshowdb scraper